--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    
-    <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/carbon-components/css/carbon-components.min.css"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Open neighbor project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
